# hyprquran

./: .SRCINFO  .gitignore  Cargo.toml  ERD.md  FINAL_ENHANCEMENT_REPORT.md  GITHUB_SECRETS.md  LICENSE  PKGBUILD  PRD.md  README.md  SECURITY_STABILITY_EVALUATION.md  TASKS.md  test_package.sh
.github/workflows/: ci.yml
.trae/documents/: Implement HyprQur'an (Wayland Rust app).md
assets/desktop/: hyprquran.desktop
assets/quran/: fatiha.json
assets/translations/: en_fatiha.json  id_fatiha.json
hyprquran/: config  packed-refs
hyprquran/objects/pack/: pack-7e9edcb2906949ffb3621b74bc45b8cc4ea8e4a5.idx  pack-7e9edcb2906949ffb3621b74bc45b8cc4ea8e4a5.pack  pack-7e9edcb2906949ffb3621b74bc45b8cc4ea8e4a5.rev
src/: app.rs  data.rs  db.rs  lib.rs  logging.rs  main.rs  state.rs  storage.rs  surah_index.rs  ui.rs
