[package]
name = "hyprquran"
version = "0.1.0"
edition = "2021"

[features]
default = []
sqlite = ["rusqlite"]

[dependencies]
gtk4 = "0.7"
glib = "0.17"
gio = "0.17"
pango = "0.17"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
directories = "5"

[dependencies.rusqlite]
version = "0.31"
optional = true

[package.metadata.docs]
default-target = "x86_64-unknown-linux-gnu"
