[package]
name = "hyprquran"
version = "0.1.0"
edition = "2021"
authors = ["Nuzli Hernawan <nuzlilatief@gmail.com>"]

[features]
default = ["gui"]
sqlite = ["rusqlite"]
gui = ["gtk4", "glib", "gio", "pango"]

[dependencies]
gtk4 = { version = "0.7", optional = true }
glib = { version = "0.18", optional = true }
gio = { version = "0.18", optional = true }
pango = { version = "0.18", optional = true }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
directories = "5"

[dependencies.rusqlite]
version = "0.31"
optional = true

[[bin]]
name = "import"
path = "src/bin/import.rs"
required-features = ["sqlite"]

[[bin]]
name = "tanzil_import"
path = "src/bin/tanzil_import.rs"
required-features = ["sqlite"]

[package.metadata.docs]
default-target = "x86_64-unknown-linux-gnu"
